--- a/Content/Details/css.css
+++ b/Content/Details/css.css
@@ -37,3 +37,19 @@ a.links{
     color:blue;
     bottom:3px;
 }
+table#httpTable{
+    padding:5px;
+}
+
+td.http{
+    width:150px;
+    height:60px;
+    text-align:center;
+    background:#dddddd;
+    margin:0;
+}
+
+a.http{
+    font:19px;
+    color:#28004D;
+}
